last video added

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 <p></p>
 <center><video autoplay muted loop> <source src="videos/7.mp4"></video></center>
 <p></p>
+<center><video autoplay muted loop> <source src="videos/8.mp4"></video></center>
+<p></p>
 </body>
 </html>
